test_apps/test-typechecker/fail/entityvoidtype.app
application test

section datamodel

  entity User {
    authoredPapers :: Void
  }